tests/errors/no_main.asm
FUNC LABEL 1
    MOV STK A VAL 4
    PRINT STK A
    CAL VAL 3
    RET
FUNC LABEL 3
    MOV STK A VAL 92
    PRINT STK A
    CAL VAL 2
    RET
FUNC LABEL 2
    MOV REG 0 VAL 1
    PRINT REG 0
    RET
